# slam-for-drone-using-RTAB

./: README.md
drone_gas_core/: package.xml  setup.cfg  setup.py
drone_gas_core/config/: chemical_mapper.yaml  cmd_vel_watchdog.yaml  exploration_controller.yaml  gas_sensor_sim.yaml  rtabmap_params.yaml
drone_gas_core/drone_gas_core/: chemical_mapper_node.py  cmd_vel_watchdog_node.py  exploration_controller_node.py  gas_sensor_sim_node.py  simple_depth_avoidance_node.py  visual_odometry_smoke_motion.py
drone_gas_core/launch/: README_VO_SIMULATION.txt  full_system.launch.py  record_gas_session.launch.py  rtabmap_rgbd.launch.py
drone_gas_core/resource/: drone_gas_core
drone_gas_core/rviz/: drone_gas_core.rviz
drone_gas_core/scripts/: check_rgbd_odom.sh
drone_gas_sim_bridge/: package.xml  setup.cfg  setup.py
drone_gas_sim_bridge/config/: gazebo_controller_bridge.yaml  gz_ros_bridge.yaml
drone_gas_sim_bridge/drone_gas_sim_bridge/: gazebo_controller_bridge_node.py
drone_gas_sim_bridge/launch/: gazebo_controller_bridge.launch.py  spawn_simple_drone.launch.py
drone_gas_sim_bridge/models/simple_drone/: model.config  model.sdf
drone_gas_sim_bridge/resource/: drone_gas_sim_bridge
drone_gas_sim_bridge/worlds/: empty_world.sdf
