<?xml version="1.0"?>
<package format="3">
  <name>drone_gas_core</name>
  <version>0.1.0</version>
  <description>Core drone gas detection nodes with RTAB-Map integration.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>rtabmap_launch</exec_depend>
  <exec_depend>drone_gas_sim_bridge</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
